<resources>
    <string name="app_name">BlorBoQUEST</string>
    <string name="upgrade">UPGRADE</string>
    <string name="click_here_for_money">click here for money</string>
    <string name="cash">Cash: $</string>
    <string name="email">This is an email.</string>
    <string name="menu">Menu ></string>
    <string name="back_to_game">Back to game ></string>
    <string name="settings">Settings ></string>
    <string name="gallery">Gallery ></string>
    <string name="emailText">Email (0) ></string>
    <string name="background_information">Background Information ></string>
    <string name="credits">Credits ></string>
    <string name="emailNotificationNum">[0]</string>
    <string name="background_color_settings">Background color:</string>
    <string name="sfx_toggle_label">Sfx</string>
<string-array name="emailTextArray">
    <item id="0">Hey buddy hows it goiiinnnn~~ teehee, your wife is doing good, said she\'s the happiest she\'s ever been actually ;3. Hope you\'re doing good, sorry can\'t help you out I have my hands full with spending your money. toodaloo~~</item>
    <item id="1">Heard you need a job buddy~ want to work at my new company? It\'s called BlorBo corp. I made it using your money teehee. I promise we have good benefits like, bathrooms, uhhhhhh, windows sometimes. Good luck on the interview buddy! :3</item>
    <item id="2">Hey stinky, don\'t come back, blorbo treats me right and your son gets all the toys that he wants. I can\'t believe I actually was your wife. Yuk</item>
    <item id="3">Email 4 :]</item>
    <item id="4">Email 5 :#</item>
    <item id="5">Email 6 >:3</item>
    <item id="6">Email 7 :j</item>
    <item id="7">Email 8 ;3</item>
    <item id="8">Email 9 :D</item>
    <item id="9">Email 10 :O</item>
</string-array>
    <string-array name="emailLabelArray">
        <item id="0">BlorBo-----Teehee-----------------today</item>
        <item id="1">BlorBo-----haiii------------------today</item>
        <item id="2">Wife------->:(--------------------today</item>
        <item id="3">Son--------I\'m scared-------------today</item>
        <item id="4">Mom--------I don\'t miss you-------today</item>
        <item id="5">Irs--------Urgent---------------today</item>
        <item id="6">Blorb…-----Urgent---------------today</item>
        <item id="7">BlorBo-----:3---------------------today</item>
        <item id="8">BlorBo-----Hows it goin?----------today</item>
        <item id="9">BlorBo-----Your wife\'s…--------today</item>
    </string-array>


</resources>